build/readiness-app/objects/inc_ReportScheduler__c.object
<CustomObject>
    <label>Incontact Report Scheduler</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>SchedulerId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incontact Report Scheduler</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>App_Name__c</fullName>
        <description>Name of the Analytics App</description>
        <inlineHelpText>Name of the Analytics App</inlineHelpText>
        <label>App Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>First Call Resolution</fullName>
                    <default>true</default>
                    <label>First Call Resolution</label>
                </value>
                <value>
                    <fullName>Sales Productivity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRON_Expression__c</fullName>
        <label>CRON Expression</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Run_Date__c</fullName>
        <description>Last data synch up date time</description>
        <label>Last Run Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Scheduled_Day__c</fullName>
        <label>Scheduled Day</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_DateTime__c</fullName>
        <label>Start DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Underlying_Reports__c</fullName>
        <label>Underlying Reports</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UpdateScheduledJob__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update Schedule Job</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>Category__c</columns>
        <columns>NAME</columns>
        <columns>Frequency__c</columns>
        <columns>Scheduled_Day__c</columns>
        <columns>Start_DateTime__c</columns>
        <columns>UpdateScheduledJob__c</columns>
        <columns>CRON_Expression__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>